@@ -15,22 +15,21 @@ Features:
    o Uses dump, afio, tar, or cpio archivers
    o Backup, list, compare, extract, extract list of files modes
    o Compression and buffering options for all backup types
-   o Handles multivolume backups
    o Full (0) and 1-9 levels of incremental backup (like "dump")
    o Keeps a table of contents so you know what's on each tape
    o Does remote filesystems (over rsh/ssh; no special service)
    o Works with IDE/SCSI tapes, Linux ftape,
-     or archives to normal files rather than a device
+     or archives to normal on-disk files rather than a device
    o Nice log files
 
 Software needed:
    o perl
    o fileutils, findutils
    o one or more of
-       dump/restore afio tar cpio zip/unzip
+       dump/restore afio tar cpio
    o mt
    o gzip, bzip2, or compress (optional)
-   o buffer (optional)
+   o buffer (optional) [needs patches for 2+GB file support]
 
 See the INSTALL file for installation instructions.
 
