@@ -6,17 +6,19 @@ Some of these might not happen, but figured I should jot them down
 
 Move CVS to sf.net
 
-test everything again since it's been so long since I used it
+Test everything again since it's been so long since I used it
 
-Fix so if backup errors out we know it (errors lost right now)
-Big command chain is the problem - need to trap errors.
+Fix so if if a remote fs backup errors out we know it 
+(errors lost right now)
+
+use -print0 for find and similar for the archivers
+  -need to use find's exclude not egrep (or egrep -0)
+  -how to fix the sed command? (not really needed, just for looks)
+
+try bfr or dbuffer (buffer seems unmaintained; no O_LARGEFILE either)
 
 
 OLD LIST:
-
-alternate paths to commands
-  modify checkinpath
-  modify all places that use the commands
 
 when using files
   make lower numbered level nuke higher ones & rm index?
@@ -26,7 +28,6 @@ Features to add:
      interaction w/ logs
      interaction w/ files
  - "no blocking at all" option
- - move CVS to sourceforge
  - make a manual page!  too many options now :)
  - interactive restore-like shell for types besides dump
       see notes below
@@ -45,7 +46,6 @@ Features to add:
  - some "level" that uses rpm, verifies all packages, and just backs
       up any file not in a package OR changed from a package. and the rpm list.
  - once the above works make it work for debian packages
- - add switch to remove all index entries for all tapes
  - put .zip back in if I can make it behave
 
 
@@ -53,7 +53,6 @@ Cleanup/fix:
  - make -extract -files for afio/cpio/zip recurse dirs
       dump/tar already to this.
  - try restore -D for comparing subdirs w/ restore
- - check that dir we are backing up exists
 
 
 -------------------
