@@ -30,8 +30,8 @@ $compr_level = '4';     # compression level (1-9) (for gzip/bzip2/zip)
 # Buffering
 $buffer      = 'buffer'; # to use "buffer" program to help streaming
 $buffer_megs = '3';      # buffer memory size (in megabytes)
-$pad_blocks  = 'true';   # true to pad blocks to blocksize (devices only, not used when 
-                         # archiving to files)
+$pad_blocks  = 'true';   # true to pad blocks to blocksize (devices only, not used when
+			 # archiving to files)
 
 # Device to backup to - non-rewinding version please!
 #
@@ -71,7 +71,7 @@ $exclude_expr[1] = '.*~$';  #'# single quote so emacs font-lock is happy
 
 # File extensions that should not be compressed (seperate with spaces)
 # For afio and zip only (since they do each file individually)
-$nocompress_types = 'mp3 Z z gz gif zip lha jpeg jpg taz tgz deb rpm bz2';
+$nocompress_types = 'mp3 MP3 Z z gz gif zip ZIP lha jpeg jpg JPG taz tgz deb rpm bz2';
 
 # If true (default), level zero "all" assumes you want to erase and use
 # a new tape. If false, level zero "all" appends like all other backups
@@ -136,14 +136,10 @@ $dump_use_dumpdates = 'false';
 
 # ----------------------------------------------------------------------
 # Paths to commands. Default will look for them in $PATH. Set if
-# you want to set them explicitly, liek this:
+# you want to set them explicitly, like this:
 #
 #   $path{'tar'} = '/usr/local/bin/gtar';
-#
-# Commands that are checked this way:
-#   afio buffer bzip2 compress cpio dd dump egrep find ftmt gzip hostname
-#   mt printf restore rm rsh sed sed ssh ssh1 ssh2 tar tee touch
-#   uncompress unzip zip
+
 
 
 ######################################################################
