@@ -24,17 +24,18 @@ HREF="tarball/flexbackup-0.9.9.tar.gz">flexbackup-0.9.9.tar.gz</A>  ()
 <B>Related stuff:</B><BR>
 
 <BLOCKQUOTE>
-This program can use the "buffer" utility: <I>(recommended, not required)</I><BR>
+This program can use the "buffer" utility: <I>(recommended, not required)</I>
+The RPMs are compiled with changes to allow large file (>2GB) support<BR>
 Source: <A HREF="other/buffer-1.19.shar.gz">buffer-1.19.shar.gz</A><BR>
-Source RPM: <A HREF="other/buffer-1.19-4.src.rpm">buffer-1.19-4.src.rpm</A><BR>
-Redhat 8.x RPM: <A HREF="other/buffer-1.19-4.i386.rpm">buffer-1.19-4.i386.rpm</A><BR>
+Source RPM: <A HREF="other/buffer-1.19-5.src.rpm">buffer-1.19-5.src.rpm</A><BR>
+Redhat 8.x RPM: <A HREF="other/buffer-1.19-5.i386.rpm">buffer-1.19-5.i386.rpm</A><BR>
 </BLOCKQUOTE>
 
 <BLOCKQUOTE>
 People sometimes have trouble finding afio... <I>(recommended, not required)</I><BR>
-Source: <A HREF="other/afio-2.4.5.tgz">afio-2.4.5.tgz</A><BR>
-Source RPM: <A HREF="other/afio-2.4.5-2.src.rpm">afio-2.4.5-5.src.rpm</A><BR>
-Redhat 8.x RPM: <A HREF="other/afio-2.4.5-2.i386.rpm">afio-2.4.5-5.i386.rpm</A><BR>
+Source: <A HREF="other/afio-2.4.7.tgz">afio-2.4.7.tgz</A><BR>
+Source RPM: <A HREF="other/afio-2.4.7-134.src.rpm">afio-2.4.7-134.src.rpm</A> (from SuSe)<BR>
+Redhat 8.x RPM: <A HREF="other/afio-2.4.7-134.i386.rpm">afio-2.4.7-134.i386.rpm</A><BR>
 </BLOCKQUOTE>
 
 <B>Thanks:</B>
